Resolves: tdf#89186 descend into dimension children to obtain leaf result

(cherry picked from commit 81f2bbc2fc42688d5f884d3dde58abe4c265694a)

Backported.

Change-Id: Iea6c292c6d7347c4abb221672e583118196e6c1f